brat/test/golden/error/kbadvec3.brat
constNil :: { Bit -> Vec(Bit, 0) }
constNil = { b => cons(1, nil) }
