brat/test/golden/error/kbadvec3.brat.golden
Error in test/golden/error/kbadvec3.brat on line 2:
constNil = { b => cons(1, nil) }
                  ^^^^^^^^^^^^

  Unification error: Couldn't force 1 + VPar In checking_check_defs_1_constNil_thunk_2_numpat2val_3 0 to be 0

